2003-06-20  William Jon McCann  <mccann@jhu.edu>

	* cows.png:
	* eggs.png:
	* gnomes.png:
	* mice.png:
	* robots.png:
	* windows.png: Made background transparent.

2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* properties.h: 
	* properties.c: Removed icon theme draw area.  After
	the pref became instant apply it wasn't needed.
	Added background color configuration.

	* graphics.h:
	* graphics.c: Convert to use pixbufs.  This will allow
	us to use image themes with transparency and be able to
	easily scale the images.  Added the ability to configure
	the background color like the other games.

	* gameconfig.c (load_game_configs): 
	* graphics.c (load_game_graphics): Use glib file utilities
	and don't make so many assumptions about filenames (like
	don't assume there are no periods).
	(load_bubble_graphics): Use g_build_filename.

	* properties.c: Made preferences instant apply.

	* statusbar.c (gnobots_statusbar_new): Decrease spacing
	between status bar items since we no longer need room for a
	GTK separator.

	* main.c: 
	* properties.h: 
	* properties.c: Initial conversion to gconf.

	* keyboard.c (keyboard_string): Use gdk_keyval_name for
	num to name mapping.  When we verify that nothing else
	uses keylabels.h it can be removed.
	(keyboard_preferred): Use gdk_keyval_to_upper to convert
	case.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* properties.c (show_properties_dialog): Clean up preferences
	dialog layout.

	* keyboard.c: 
	* keyboard.h: 
	* sound.c: 
	* sound.h: 
	* game.c: 
	* graphics.c: 
	* graphics.h: 
	* menu.c: 
	* menu.h: 
	* gameconfig.c: 
	* gameconfig.h: 
	* gnobots.c: 
	* statusbar.h: 
	* statusbar.c: Fixed compiler warnings.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: Removed all the "Are you sure questions".

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: i18n fixes from Christian Neumair (bug #114875).

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>
